--- a/bot/package.json
+++ b/bot/package.json
@@ -9,12 +9,10 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "grammy": "^1.25.3",
-    "qrcode": "^1.5.3"
+    "grammy": "^1.25.3"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
-    "@types/qrcode": "^1.5.5",
     "tsx": "^4.19.2",
     "typescript": "^5.4.5"
   },
