--- a/bot/package.json
+++ b/bot/package.json
@@ -12,7 +12,10 @@
     "grammy": "^1.25.3"
   },
   "devDependencies": {
+    "@grammyjs/menu": "^1.3.1",
     "@types/node": "^24.3.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.4.5"
   },
