--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
