--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node dist/main.js",
+    "start:prod": "pm2 stop JungleVPN && nest build && pm2 start JungleVPN",
     "start:dev": "nest start --watch",
-    "build": "nest build",
-    "push": "rsync -avz --delete --exclude-from='.rsync-exclude' -e \"ssh -p 1702\" ./ root@144.124.231.221:/root/JungleVPN/"
+    "build": "nest build"
   },
   "dependencies": {
     "@biomejs/biome": "^2.2.3",
