--- a/biome.json
+++ b/biome.json
@@ -43,5 +43,12 @@
     "formatter": {
       "trailingCommas": "none"
     }
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   }
 }
