--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "baseUrl": ".",
     "incremental": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@bot/*": ["src/bot/*"],
+      "@xui/*": ["src/xui/*"],
+      "@payments/*": ["src/payments/*"],
+      "@users/*": ["src/users/*"],
+      "@session/*": ["src/session/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
