--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@biomejs/biome": "^2.2.3",
     "@grammyjs/menu": "^1.3.1",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
@@ -19,7 +20,6 @@
     "axios-cookiejar-support": "^6.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.4.5",
     "grammy": "^1.38.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
