--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:prod": "pm2 stop JungleVPN && nest build && pm2 start JungleVPN",
-    "start:dev": "nest start --watch",
-    "build": "nest build"
+    "start:prod": "pm2 stop JungleVPN && bunx nest build && pm2 start JungleVPN",
+    "start:dev": "bunx nest start --watch",
+    "build": "bunx nest build",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migration:run": "npm run typeorm migration:run -- -d ./src/config/typeorm.ts",
+    "migration:generate": "npm run typeorm -- -d ./src/config/typeorm.ts migration:generate ./src/migrations/$npm_config_name",
+    "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert"
   },
   "dependencies": {
     "@biomejs/biome": "^2.2.3",
@@ -35,6 +40,7 @@
     "@nestjs/testing": "11.1.6",
     "@types/express": "^5.0.3",
     "@types/node": "^20.12.12",
+    "dotenv": "^17.2.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
