--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:prod": "pm2 stop JungleVPN && bunx nest build && pm2 start JungleVPN",
+    "start:prod": "forever start -c bun -a -l forever.log -o out.log -e err.log dist/src/main.js",
     "start:dev": "bunx nest start --watch",
     "build": "bunx nest build",
     "typeorm": "bun run build && bunx ts-node -r tsconfig-paths/register node_modules/typeorm/cli",
@@ -13,7 +13,6 @@
     "migration:show": "bun run typeorm migration:show -d dist/db/datasource.js"
   },
   "dependencies": {
-    "@biomejs/biome": "^2.2.3",
     "@grammyjs/menu": "^1.3.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -25,6 +24,7 @@
     "axios-cookiejar-support": "^6.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
@@ -35,12 +35,12 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.5",
+    "@biomejs/biome": "^2.2.3",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^10.1.2",
-    "@nestjs/testing": "11.1.6",
+    "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.3",
     "@types/node": "^20.12.12",
-    "dotenv": "^17.2.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
