--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.3",
     "@types/node": "^20.12.12",
+    "forever": "^4.0.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
