Remnawave implementation (service)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "@bot/*": ["src/bot/*"],
       "@xui/*": ["src/xui/*"],
+      "@remna/*": ["src/remna/*"],
       "@payments/*": ["src/payments/*"],
       "@users/*": ["src/users/*"],
       "@session/*": ["src/session/*"],
