--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "migration:show": "bun run typeorm migration:show -d dist/db/datasource.js"
   },
   "dependencies": {
+    "@grammyjs/conversations": "^2.1.0",
     "@grammyjs/menu": "^1.3.1",
+    "@grammyjs/router": "^2.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
