Payment status check

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios-cookiejar-support": "^6.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
     "pg": "^8.13.0",
