--- a/package.json
+++ b/package.json
@@ -3,29 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start:prod": "bunx nest build && forever stopall && forever start --minUptime 1000 --spinSleepTime 2000 -c bun -a -l forever.log -o out.log -e err.log dist/src/main.js",
-    "start:dev": "bunx nest start --watch",
-    "stop": "forever stopall",
-    "build": "bunx nest build",
-    "typeorm": "bun run build && bunx ts-node -r tsconfig-paths/register node_modules/typeorm/cli",
-    "migration:generate": "bun run typeorm migration:generate db/migrations/Migration -d dist/db/datasource.js",
-    "migration:create": "bun run typeorm migration:create db/migrations/Migration",
-    "migration:run": "bun run typeorm migration:run -d dist/db/datasource.js",
-    "migration:show": "bun run typeorm migration:show -d dist/db/datasource.js"
+    "dev": "bunx nest start --watch",
+    "build": "nest build",
+    "start": "bun run build && docker compose up --build",
+    "migration:generate": "bun node_modules/typeorm/cli migration:generate db/migrations/Migration -d dist/db/datasource.js",
+    "migration:run": "bun node_modules/typeorm/cli migration:run -d db/datasource.js",
+    "migration:revert": "bun node_modules/typeorm/cli migration:revert -d db/datasource.js"
   },
   "dependencies": {
     "@grammyjs/conversations": "^2.1.0",
     "@grammyjs/menu": "^1.3.1",
-    "@grammyjs/router": "^2.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "11.0.0",
     "axios": "^1.12.2",
-    "axios-cookiejar-support": "^6.0.4",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
@@ -42,16 +35,29 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^10.1.2",
     "@nestjs/testing": "^11.0.1",
+    "@types/bun": "^1.3.1",
     "@types/express": "^5.0.3",
     "@types/node": "^20.12.12",
-    "forever": "^4.0.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "imports": {
+    "@bot/*": [
+      "src/bot/*"
+    ],
+    "@remna/*": [
+      "src/remna/*"
+    ],
+    "@payments/*": [
+      "src/payments/*"
+    ],
+    "@assets/*": [
+      "src/assets/*"
+    ]
   }
 }
