--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "rootDir": ".",
     "incremental": true,
     "strict": true,
     "skipLibCheck": true,
