--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,24 @@
 services:
-  server:
-    image: bun-server
-    build:
-      context: .
-      dockerfile: Dockerfile
+  db:
+    image: postgres:14
+    container_name: jungle_postgres
     env_file:
       - .env.production
     ports:
-      - "3000:3000"
+      - "5434:5432"
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    restart: always
+
+  server:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: jungle_bot
+    depends_on:
+      - db
+    env_file:
+      - .env.production
+    ports:
+      - "5000:5000"
+    restart: always
