--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@grammyjs/conversations": "^2.1.0",
+    "@grammyjs/hydrate": "^1.6.0",
     "@grammyjs/menu": "^1.3.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
