Added remna webhook for user expiration events

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx nest start --watch",
+    "dev": "nest start --watch",
     "build": "nest build",
     "start": "docker compose up --build -d",
     "migration:generate": "npm run build && npx typeorm migration:generate db/migrations/Migration -d dist/db/datasource.js",
@@ -17,12 +17,14 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "11.0.0",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
+    "ngrok": "^5.0.0-beta.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
