--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^4.1.12"
   },
   "engines": {
     "node": ">=20.0.0"
