--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
+    "ngrok": "^5.0.0-beta.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
