Added inline query for referral program

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@utils/*": ["src/utils/*"]
     }
   },
-  "include": ["src/**/*", "db/**/*"],
+  "include": ["src/**/*", "db/**/*", "assets/**/*"],
   "exclude": ["node_modules", "dist"]
 }
