Added cidr-matcher to check ips

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "11.0.0",
     "axios": "^1.12.2",
+    "cidr-matcher": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.2",
@@ -36,6 +37,7 @@
     "@nestjs/schematics": "^10.1.2",
     "@nestjs/testing": "^11.0.1",
     "@types/bun": "^1.3.1",
+    "@types/cidr-matcher": "^2.1.2",
     "@types/express": "^5.0.3",
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5",
